--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,12 @@
     "require": {
         "php": "^8.3"
     },
+    "suggest": {
+        "potter/aware-interfaces": "dev-main",
+        "potter/aware": "dev-main",
+        "potter/contracts": "dev-main",
+        "potter/framework": "dev-main"
+    },
     "license": "MIT",
     "autoload": {
         "psr-4": {
